--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,19 @@
   height: 50px;
 }
 
+.navbar-button {
+  height: 100%;
+  background: transparent;
+  border: 0px solid transparent;
+  color: white;
+  font-size: 16px;
+}
+
+.navbar-button:hover {
+  background: rgb(71, 71, 71);
+  cursor: pointer;
+}
+
 .footer {
   height: 100px;
 }
